fix spacing

--- a/source/less/site/layout.less
+++ b/source/less/site/layout.less
@@ -15,7 +15,6 @@
 .wrapper:before {
     content: '';
     display: inline-block;
-    height: 100%;
     margin-right: -0.25em;
 }
 .wrapper:after {
